force-app/main/default/objects/SnowflakeCreds__c/SnowflakeCreds__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Snowflake Creds</label>
</CustomObject>