force-app/main/default/objects/SnowflakeCreds__c/fields/Database__c.field-meta.xml
<CustomField>
    <fullName>Database__c</fullName>
    <label>Database</label>
    <length>100</length>
    <type>Text</type>
</CustomField>