force-app/main/default/objects/SnowflakeCreds__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <type>TextArea</type>
</CustomField>