force-app/main/default/objects/SnowflakeCreds__c/fields/Schema__c.field-meta.xml
<CustomField>
    <fullName>Schema__c</fullName>
    <label>Schema</label>
    <length>100</length>
    <type>Text</type>
</CustomField>