force-app/main/default/objects/SnowflakeCreds__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Table</label>
    <length>100</length>
    <type>Text</type>
</CustomField>